--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+fuzzywuzzy==0.18.0
 gensim==4.3.2
+ir_datasets==0.5.6
+ir_measures==0.3.3
+nltk==3.8.1
 numpy==1.26.4
 spacy==3.7.2
 streamlit==1.31.1
 streamlit_searchbox==0.1.7
-nltk
+sympy==1.12
